@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1698 2003/11/11 23:54:03 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.1699 2003/11/12 00:04:59 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-12 03:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
+  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
+    ! fixed bug in locking introduce recently.
+    * improvements in page balancing - not finished yet but working
 
 2003-11-12 13:03 GMT+1200 Peter Rees <peter@rees.co.nz>
   * /rtl/isprint.c
